--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.1",
+    "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
